# ursa

./: .gitignore  Cargo.toml  README.md
.skills/: commit.md  review.md
cli/: Cargo.toml
cli/src/: completion.rs  config.rs  main.rs  ui.rs
cli/src/commands/: chat.rs  config.rs  eval.rs  mod.rs  task.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/context/: compression.rs  engine.rs  mod.rs  ranking.rs
core/src/context/sources/: diagnostics.rs  filesystem.rs  git.rs  issue_tracker.rs  mod.rs  symbol_graph.rs
core/src/eval/: dashboard.rs  metrics.rs  mod.rs  reporter.rs  tracer.rs
core/src/pipeline/: engine.rs  memory_tools.rs  mod.rs  subagent.rs
core/src/pipeline/gvrc/: a2a.rs  checkpoint.rs  context.rs  events.rs  executor.rs  learning.rs  mod.rs  planner.rs  reviewer.rs  runner.rs  solver.rs  types.rs  verifier.rs
core/src/pipeline/prompts/: act.md  mod.rs  plan.md  planner.md  review.md  reviewer.md  solver.md  system.md  task.md  verifier.md
core/src/pipeline/stages/: act.rs  mod.rs  plan.rs  review.rs  task.rs
core/src/runtime/: bus.rs  config.rs  lane.rs  mod.rs  session.rs
core/src/telemetry/: logger.rs  mod.rs  span.rs
core/src/workflow/: context.rs  definition.rs  events.rs  mod.rs
llm/: Cargo.toml
llm/src/: config.rs  lib.rs  provider.rs  resilience.rs
llm/src/models/: claude.rs  deepseek.rs  kimi.rs  mod.rs  openai.rs
lunar/: Cargo.toml
plugins/: Cargo.toml
plugins/src/: lib.rs  plugin.rs
plugins/src/stubs/: git.rs  mod.rs  web_search.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/bootstrap/: loader.rs
services/src/delivery/: backoff.rs  mod.rs  queue.rs  runner.rs
services/src/memory/: search.rs  store.rs
services/src/skills/: loader.rs  manager.rs  mod.rs
tools/: Cargo.toml
tools/src/: lib.rs  registry.rs  tool.rs
tools/src/tools/: bash.rs  execute.rs  list_dir.rs  memory_search.rs  memory_write.rs  mod.rs  notify.rs  read_file.rs  search.rs  symbol_search.rs  todo_write.rs  write_file.rs
treesitter/: Cargo.toml
treesitter/src/: incremental.rs  language.rs  lib.rs  parser.rs  scope_graph.rs  symbol_index.rs
treesitter/src/languages/: mod.rs
treesitter/src/queries/: python.scm  (+2 more)
treesitter/tests/: integration_test.rs
(+2 files in other folders)
