[package]
name = "ursa-core"
version.workspace = true
edition.workspace = true

[dependencies]
ursa-llm = { path = "../llm" }
ursa-tools = { path = "../tools" }
ursa-services = {path = "../services"}
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
