[package]
name = "ursa-llm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
bytes = "1"
reqwest = {version="0.12",features=["json","stream"]}
